--- a/app/src/main/res/layout/header_broker_analysis.xml
+++ b/app/src/main/res/layout/header_broker_analysis.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_analysis_broker"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.firstidea.android.brokerx.AnalysisBrokerActivity"
-    tools:showIn="@layout/activity_analysis_broker">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+    tools:context="com.firstidea.android.brokerx.AnalysisBrokerActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -76,61 +67,6 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/top11BuyerLinear"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/white"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/left10"
-                    android:layout_marginTop="5dp"
-                    android:layout_weight="1"
-                    android:text="@string/top_11_highest_paying_buyer"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_right_black_24dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/desparity_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/white"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/left10"
-                    android:layout_marginTop="5dp"
-                    android:layout_weight="1"
-                    android:text="Brokerage Desparity Graph"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_right_black_24dp" />
-
-            </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -146,7 +82,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/left10"
                     android:layout_marginTop="5dp"
-                    android:text="Search Enquiry"
+                    android:text="Fill the option"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -187,51 +123,39 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:weightSum="2.5"
                         android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/starDate"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/left10"
-                            android:layout_weight="1.1"
+                            android:layout_weight="1"
                             android:background="@drawable/date_box"
-                            android:onClick="setStartDate"
-                            android:padding="5dp"
+                            android:onClick="SetDate"
+                            android:padding="@dimen/pdd5"
                             android:textColor="@color/dividerColor"
                             android:drawableLeft="@drawable/calendar1"
-                            android:drawablePadding="10dp"
-                            android:gravity="center_vertical"
-                            android:text="From Date"
-                            android:textSize="14sp"
-                            android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground"/>
+                            android:textSize="14sp" />
 
                         <View
-                            android:layout_width="0dp"
+                            android:layout_width="40dp"
                             android:layout_height="2dp"
-                            android:layout_weight="0.3"
                             android:layout_gravity="center_vertical"
                             android:background="@color/black_overlay" />
 
                         <TextView
                             android:id="@+id/endDate"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="@dimen/left10"
-                            android:layout_weight="1.1"
+                            android:layout_marginLeft="@dimen/left10"
+                            android:layout_weight="1"
                             android:background="@drawable/date_box"
-                            android:onClick="setEndDate"
-                            android:padding="5dp"
+                            android:onClick="SetDate"
+                            android:padding="@dimen/pdd5"
                             android:textColor="@color/dividerColor"
                             android:drawableLeft="@drawable/calendar1"
-                            android:drawablePadding="10dp"
-                            android:gravity="center_vertical"
-                            android:text="To Date"
-                            android:textSize="14sp"
-                            android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground"/>
+                            android:textSize="14sp" />
 
                     </LinearLayout>
 
@@ -264,36 +188,12 @@
                     android:layout_height="40dp"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_gravity="right"
                     android:background="@drawable/app_btn"
-                    android:id="@+id/button_search"
+                    android:id="@+id/button"
                     android:layout_weight="0.52" />
-<!--
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/anlysis_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:paddingBottom="5dp"
-                    android:background="@color/activity_background_color"
-
-                    />
--->
-
-
             </LinearLayout>
-
-
-
-
         </LinearLayout>
-
-
-    </ScrollView>
-
-
 </RelativeLayout>
