--- a/app/src/main/res/layout/nav_header_broker_home.xml
+++ b/app/src/main/res/layout/nav_header_broker_home.xml
@@ -25,30 +25,33 @@
         android:layout_marginRight="16dp"
         android:background="@drawable/edit_profile_icon"
         android:layout_alignParentRight="true"/>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/user_image"
-    android:gravity="center_horizontal"
-    android:layout_marginLeft="16dp"
-    android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Govind Kulkarni"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:text="9730656051"
-        android:textColor="@color/white"
-        android:textSize="16sp"/>
-</LinearLayout>
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_below="@+id/user_image"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Govind Kulkarni"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
+            android:id="@+id/user_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:text="9730656051"
+            android:textColor="@color/white"
+            android:textSize="16sp"/>
+    </LinearLayout>
 </RelativeLayout>
